# positional

./: Cargo.toml  README.md
positional/: Cargo.toml
positional/benches/: serde.rs  serialize.rs  write_to_file.rs
positional/examples/: write.rs  write_read.rs
positional/src/: error.rs  field.rs  file.rs  lib.rs  parsed_field.rs  row.rs
positional/tests/: external_types.rs  optional_field.rs  parse_row.rs  positional_file.rs  positional_file_with_counter.rs
positional_derive/: Cargo.toml
positional_derive/src/: attributes_parsing.rs  from_positional_rows.rs  lib.rs  to_positional_row.rs  type_parsing.rs
