[package]
name = "positional"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
positional_derive = { version = "0.1", path = "../positional_derive" }
quote = "1.0"
proc-macro2 = "1.0.39"
thiserror = "1.0.31"
itertools = "0.10.3"

[dev-dependencies]
chrono = "0.4.19"
fake = { version = "2.4.3", features = ["derive", "chrono"] }
rand = "0.8"
